using System;
using System.Collections.Generic;
using System.Text;

namespace BridgeDemo.Implements
{
    public interface INotificationSender
    {
        void Send(string message);
    }
}
